# towr

towr/: CMakeLists.txt  package.xml
towr/matlab/: hermite_visualization.m  partial_derivative_of_rot_mat.m  partial_derivative_of_rot_mat.m~  plot_rosbag_m545.m  plot_rosbag_m545_joints.m  rotMatTimesVectorDerivative.m
towr/src/: ee_forward_kinematics_constraint.cc  ee_joint_limits_constraint.cc  ee_motion_with_wheels_constraint.cc  force_constraint.cc  gait_generator.cc  joint_range_and_speed_constraint.cc  m545_model.cc  m545_model_with_joints.cc  nlp_factory.cc  nlp_formulation.cc  nlp_formulation_extended.cc  nodes_variables_ee_joints.cc  nodes_variables_ee_motion_with_wheels.cc  nodes_variables_joint.cc  nodes_variables_limb_joints.cc  nodes_variables_phase_based.cc  parameters.cc  parameters_extended.cc  phase_nodes.cc  range_of_motion_box_constraint.cc  range_of_motion_constraint_complicated.cc  range_of_motion_constraint_joints.cc  robot_model.cc  spline_holder.cc  spline_holder_extended.cc  terrain_constraint.cc  terrain_constraint_extended.cc  time_discretization_constraint.cc  wheel_constraint_with_joints.cc  wheel_direction_constraint.cc
towr/test/: anymal_example.cc  hopper_example.cc  m545_example.cc  test_extended_formulation.cc
towr_ros/: CMakeLists.txt
towr_ros/launch/: jacobian_unit_test.launch  m545-example.launch  (+1 more)
towr_ros/src/: towr_ros.cc  (+4 more)
towr_test/: CMakeLists.txt  package.xml
towr_test/launch/: m545_jacobians_unit_test.launch  m545_joint_variables_test.launch  m545_kinematic_formulation_test.launch
towr_test/test/: m545_joints_variables_test.cc  m545_kinematic_formulation_test.cc  m545_model_with_joints_jacobians_unit_test.cc
(+47 files in other folders)
