<?xml version="1.0"?>
<package format="2">
  <name>towr_test</name>
  <version>1.4.0</version>
  <description>
    collectin of tests for towr and towr_ros.
  </description>

  <author>Edo Jelavic</author>
  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>
    
  
  <depend>towr_ros</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>towr</depend>
  
</package>
